# CS-OP

./: .env.example  .gitignore  .vercelignore  AUDIT.md  CLAUDE.md  WEBSITE-STATUS.md  claude_explain.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.html  readme.md  tsconfig.json  vercel.json
.claude/agents/: css-design-guard.md  financeboard-specialist.md  financehub-build-validator.md  workplan-sync.md
.planning/: config.json
api/: contact.ts  images.ts  migrate.ts
api/_lib/: auth.ts  cors.ts  db.ts  ip.ts  rate-limit.ts  totp.ts  ua.ts
api/admin/: images.ts
api/analytics/: events.ts  geo.ts
api/auth/: login.ts  me.ts  totp-setup.ts  totp-verify.ts
api/track/: event.ts  heartbeat.ts  pageview.ts
apps/financeboard-v2/: .gitignore  CLAUDE.md  CLAUDE_SESSION.md  PLAN.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/financeboard-v2/src-tauri/: Cargo.toml  tauri.conf.json
apps/financeboard-v2/src-tauri/capabilities/: default.json
apps/financeboard-v2/src-tauri/src/: lib.rs
apps/financeboard-v2/src-tauri/src/commands/: mod.rs
apps/financeboard-v2/src-tauri/src/db/migrations/: 001_initial.sql  002_bookings.sql  003_safepoints.sql
apps/financehub/: CLAUDE.md  CLAUDE_SESSION.md  RELEASE_PLAN.md  index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
apps/frontend/: .gitignore  AUSBAU.md  CLAUDE.md  GEO-SEO.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
apps/vaultbox/: .gitignore  AUDIT_REPORT.md  (+12 more)
(+365 files in other folders)
